# python_poetry_tool_template

./: .gitignore  README.md  pyproject.toml
mytool/: cli.py
